k8s/green-blue/auth-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: auth
  namespace: messenger
spec:
  selector:
    app: auth
    color: blue
  ports:
  - port: 8001
    targetPort: 8001
    name: http
  type: ClusterIP
