k8s/green-blue/chat-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: chat
  namespace: messenger
spec:
  selector:
    app: chat
    color: blue
  ports:
  - port: 8002
    targetPort: 8002
    name: http
  type: ClusterIP
