k8s/green-blue/friends-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: friends
  namespace: messenger
spec:
  selector:
    app: friends
    color: blue
  ports:
  - port: 8003
    targetPort: 8003
    name: http
  type: ClusterIP
