k8s/green-blue/users-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: users
spec:
  selector:
    app: users
    color: blue
  ports:
  - port: 8004
    targetPort: 8004
    name: http
  type: ClusterIP
