k8s/green-blue/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: messenger-ingress
  namespace: messenger
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: messenger.local
    http:
      paths:
      - path: /auth(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: auth
            port:
              number: 8001
      - path: /chat(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: chat
            port:
              number: 8002
      - path: /friends(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: friends
            port:
              number: 8003
      - path: /users(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: users
            port:
              number: 8004
